<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/pseudo_id_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:padding="8dp"
        android:text="Placeholder text"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/settings_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/setting_box"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/language_selection" />

    <ImageView
        android:id="@+id/invisible_box"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/setting_box"
        android:scaleType="centerInside"
        android:alpha="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.625"
        app:srcCompat="@drawable/download_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdown_menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:background="@color/white"
        android:hint="@string/select"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/settings_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@+id/settings_box"
        app:layout_constraintTop_toTopOf="@+id/settings_box"
        app:layout_constraintVertical_bias="0.45"
        tools:ignore="MissingConstraints">

        <AutoCompleteTextView
            android:id="@+id/autoComplete"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:inputType="none"></AutoCompleteTextView>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/setting_close"
        android:layout_width="67dp"
        android:layout_height="63dp"
        android:layout_marginBottom="376dp"
        android:contentDescription="@string/setting_box_close"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="@+id/settings_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/dropdown_menu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/close_button"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>