<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/background"
        android:scaleType="fitXY"
        android:src="@drawable/sky_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/hill"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/hill" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/foreground"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/foreground_foliage" />

    <ProgressBar
        android:id="@+id/loadingIndicator"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="131dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/pseudo_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:padding="8dp"
        android:text="Placeholder text"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/show_id_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show ID"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:backgroundTint="@android:color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="48dp"
        android:elevation="4dp"/>

    <FrameLayout
        android:id="@+id/qr_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="#CC000000">

        <ImageView
            android:id="@+id/qr_code_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="64dp"
            android:contentDescription="QR Code" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
